compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__const_type_variable.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
expression: "\nfn identity(a: a) -> a {\n  a\n}\n\nconst id: fn(a) -> a = identity\n"
---
module rec my.``mod``

let private identity<'a> (a: 'a): 'a = begin
    a
end
let private id = identity
