compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__pub_const_equal_to_private_function.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub const id = identity\n        "
---
module rec my.``mod``

let private identity<'a> (a: 'a) = begin
    a
end
let id = identity
