compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__record_constructor.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
expression: "\npub type X {\n  X(Int)\n}\n\npub const z = X\n\npub fn foo() {\n  z\n}"
---
module rec my.``mod``
type X =
| X of int
    
let z = fun (var0) -> begin X(var0) end
let foo () = begin
    z
end
