compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__use_private_in_internal.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
assertion_line: 168
expression: "\n              fn identity(a) {\n                a\n              }\n\n              pub type Mapper(b) {\n                Mapper(fn(b) -> b)\n              }\n\n              @internal\n              pub const id_mapper = Mapper(identity)\n        "
---
module rec my.``mod``
type Mapper<'t8> =
| Mapper of ('t8 -> 't8)
    
let private identity (a: 'u9): 'u9 = begin
    a
end
let internal id_mapper = Mapper(identity)
