compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__use_private_in_list.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub const funcs = [identity]\n        "
---
module rec my.``mod``

let private identity (a: 'u8) = begin
    a
end
let funcs = [identity]
