compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__use_qualified_pub_const_equal_to_record_with_private_function_field.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
assertion_line: 151
expression: "\n              fn identity(a) {\n                a\n              }\n\n              pub type Mapper(b) {\n                Mapper(fn(b) -> b)\n              }\n\n              pub const id_mapper = Mapper(identity)\n        "
---
module rec my.``mod``
type Mapper<'t8> =
| Mapper of ('t8 -> 't8)
    
let private identity (a: 'u9): 'u9 = begin
    a
end
let id_mapper = Mapper(identity)
